# emotion_datasets

./: .gitignore  CITATION.cff  README.md  get_all_datasets.sh  pyproject.toml
src/emotion_datasets/: __init__.py  print_manifest.py  print_metadata_table.py  process_dataset.py  process_multiple_datasets.py  process_one_dataset.py
src/emotion_datasets/dataset_processing/: __init__.py  affective_text.py  base.py  canceremo.py  carer.py  crowdflower.py  debug.py  electoral_tweets.py  emobank.py  emoint.py  emotion_stimulus.py  fb_valence_arousal.py  go_emotions.py  goodnewseveryone.py  hurricanes24.py  hurricanes8.py  isear.py  ren20k.py  semeval2018_classification.py  semeval2018_intensity.py  sentimental_liar.py  ssec.py  stockemotions.py  tales_emotions.py  tec.py  usvsthem.py  wassa22.py  xed.py
src/emotion_datasets/utils/: __init__.py  citations.py  config.py  download.py  file_stats.py  manifest.py  samples.py
