[project]
name = "emotion-datasets"
version = "0.1.0"
description = "A library for quickly collecting and processing many emotion datasets"
readme = "README.md"
authors = [{ name = "ioverho", email = "i.o.verhoeven@uva.nl" }]
requires-python = ">=3.11"
dependencies = [
    "datasets>=3.2.0",
    "duckdb==1.0.0",
    "hydra-core>=1.3.2",
    "requests>=2.32.3",
    "tqdm>=4.67.1",
]

[project.scripts]
process_dataset = "emotion_datasets:process_dataset"
print_manifest = "emotion_datasets:print_manifest"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["pip>=25.0.1"]
